--- a/views/news.ejs
+++ b/views/news.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cryptocurrency News</title>
-    <link rel="stylesheet" href="/news.css"> <!-- Update the path to your CSS file -->
+    <title>News</title>
+    <link rel="stylesheet" href="/news.css">
 </head>
 <body>
 <div class="navbar">
