--- a/public/editUser.css
+++ b/public/editUser.css
@@ -13,7 +13,7 @@ body {
 
 .container {
     width: 100%;
-    max-width: 300px; /* Adjust the max width as per your design */
+    max-width: 300px;
     padding: 20px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
