--- a/views/apod.ejs
+++ b/views/apod.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astronomy Picture of the Day</title>
-    <link rel="stylesheet" href="/apod.css"> <!-- Update the path to your CSS file -->
+    <link rel="stylesheet" href="/apod.css">
 </head>
 <body>
 <div class="navbar">
