--- a/public/admin.css
+++ b/public/admin.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.6;
     background-color: #f4f4f4;
     margin: 0;
-    padding: 20px;
+    padding: 10px;
     color: #333;
 }
 
@@ -46,23 +46,40 @@ a:hover {
 
 
 a[href='/admin/new'] {
-    display: inline-block;
-    margin-top: 20px;
-    background-color: #007bff;
+    background-color: #414e41;
     color: white;
     padding: 10px 15px;
-    border-radius: 5px;
-    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
 }
 
 a[href='/admin/new']:hover {
-    background-color: #0056b3;
+    background-color: #526452;
+}
+
+
+.logout-button {
+    background: none;
+    border: none;
+    color: white;
+    padding: 14px 16px;
+    font: inherit;
+    cursor: pointer;
+}
+
+.logout-button:hover {
+    color: #ddd;
 }
 
 
 .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: #482626;
+    border-radius: 15px;
+    font-family: Arial, sans-serif;
 }
 
 .navbar a {
@@ -77,4 +94,9 @@ a[href='/admin/new']:hover {
 .navbar a:hover {
     background-color: #ddd;
     color: black;
+}
+
+.navbar-right {
+    float: right;
+    background-color: #482626;
 }
