--- a/public/home.css
+++ b/public/home.css
@@ -1,7 +1,10 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
     line-height: 1.6;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 10px;
+    color: #333;
 }
 
 header {
@@ -12,13 +15,13 @@ header {
 }
 
 footer {
-    background-color: #333;
-    color: white;
-    padding: 1rem;
+    /* background-color: #333; */
+    color: black;
+    padding: 1;
     text-align: center;
     clear: both;
-    position: fixed;
-    bottom: 0;
+    /* position: fixed; */
+    bottom: 10px;
     width: 100%;
 }
 
@@ -27,7 +30,7 @@ main {
 }
 
 .button-group {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
 }
 
@@ -67,10 +70,88 @@ main {
     margin-top: auto;
 }
 
+.new-post-button {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    background-color: #482626;
+    border-radius: 12px;
+    padding: 10px 14px;
+    color: white;
+
+}
+
+.new-post-button:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.delete-button {
+    background-color: #482626;
+    color: white;
+    padding: 8px 12px;
+    font: inherit;
+    cursor: pointer;
+    border-radius: 12px;
+    
+    display: inline;
+}
+
+.delete-button:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+.post-block {
+    width: 35   0px; /* Fixed width */
+    /* height: 400px; Fixed height */
+    border: 1px solid #ccc;
+    border-radius: 18px;
+    padding: 20px;
+    margin-bottom: 20px;
+    /* overflow: hidden; Ensures the content doesn't overflow */
+}
+
+.carousel {
+    display: flex;
+    overflow-x: auto;
+    
+}
+
+.carousel div {
+    flex-shrink: 0;
+    /* width: 30%; */
+}
+
+.carousel-item img {
+    width: 100%; /* Ensure full width */
+    height: auto; /* Maintain aspect ratio */
+    border-radius: 15px;
+}
+
+
+
+
+.logout-button {
+    background: none;
+    border: none;
+    color: white;
+    padding: 14px 16px;
+    font: inherit;
+    cursor: pointer;
+}
+
+.logout-button:hover {
+    color: #ddd;
+}
+
 
 .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: #482626;
+    border-radius: 15px;
+    font-family: Arial, sans-serif;
 }
 
 .navbar a {
@@ -85,4 +166,9 @@ main {
 .navbar a:hover {
     background-color: #ddd;
     color: black;
+}
+
+.navbar-right {
+    float: right;
+    background-color: #482626;
 }
