--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,12 +5,23 @@
     <link rel="stylesheet" href="/admin.css">
 </head>
 <body>
-<div class="navbar">
-    <a href="/">Home</a>
-    <a href="/weather">Weather</a>
-    <a href="/apod">Astronomy Picture of the Day</a>
-    <a href="/news">News</a>
-</div>
+    <div class="navbar">
+        <a href="/">Home</a>
+        <a href="/music">Music</a>
+        <a href="/artist">Artists</a>
+
+    <% if (loggeduser.isAdmin) { %>
+        <a href="/admin" class="admin-button">Admin Panel</a>
+    <% } %>
+        
+        <div class="navbar-right">
+            <form action="/logout" method="POST">
+                <button type="submit" class="logout-button">Logout</button>
+            </form>
+        </div>
+        
+    </div>
+
 <h1>Admin Dashboard</h1>
 
 <!-- User Management Section -->
