--- a/public/editPost.css
+++ b/public/editPost.css
@@ -15,6 +15,17 @@ body {
     
 }
 
+.translate{
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    background: none;
+    border: none;
+    overflow: hidden;
+    margin-left: 12px;
+    padding: auto;
+}
+
 .navbar a {
     float: left;
     color: white;
