--- a/public/home.css
+++ b/public/home.css
@@ -14,6 +14,17 @@ header {
     text-align: center;
 }
 
+.translate{
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    background: none;
+    border: none;
+    overflow: hidden;
+    margin-left: 12px;
+    padding: auto;
+}
+
 footer {
     /* background-color: #333; */
     color: black;
