--- a/public/newpost.css
+++ b/public/newpost.css
@@ -21,7 +21,9 @@
 }
 
 .create-post-button:hover {
-    background-color: #526452;
+    background-color: #ffffff;
+    color: #000000;
+    border: 2px solid #414e41;
 }
 
 /* Style for the form */
@@ -53,7 +55,16 @@ input, textarea {
     box-sizing: border-box; /* Include padding and border in the element's width */
 }
 
-
+.translate{
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    background: none;
+    border: none;
+    overflow: hidden;
+    margin-left: 12px;
+    padding: auto;
+}
 
 .logout-button {
     background: none;
@@ -65,7 +76,8 @@ input, textarea {
 }
 
 .logout-button:hover {
-    color: #ddd;
+    color: #000000;
+    background-color: white;
 }
 
 
@@ -93,4 +105,9 @@ input, textarea {
 .navbar-right {
     float: right;
     background-color: #482626;
+}
+
+.navbar-right:hover {
+    background-color: #ddd;
+    color: black;
 }
