--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,21 +8,25 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-
+    <div class="translate">
+        <a href="/change-lang/kz"><img src="/pictures/kz.jpg" alt="kzflag" width="40px" height="30px"></a>
+        <a href="/change-lang/en"><img src="/pictures/britain.png" alt="enflag" width="40px" height="30px"></a>
+        <a href="/change-lang/ru"><img src="/pictures/russia.png" alt="ruflag" width="40px" height="30px"></a>
+    </div>
 <div class="form-container">
-    <h2>Login</h2>
+    <h2><%= t('login') %></h2>
     <form action="/login" method="post">
         <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" id="name" name="username" placeholder="Enter your username" required autocomplete="off">
+            <label for="username"><%= t('name') %></label>
+            <input type="text" id="name" name="username" placeholder="<%= t('enterUsername') %>" required autocomplete="off">
         </div>
         <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="password" required>
+            <label for="password"><%= t('password') %></label>
+            <input type="password" id="password" name="password" placeholder="<%= t('enterPassword') %>" required>
         </div>
-        <button type="submit" class="submit-btn">Login</button>
+        <button type="submit" class="submit-btn"><%= t('login') %></button>
     </form>
-    <p>Don't have an account? <a href="/signup">Signup</a></p>
+    <p><%= t('dontHaveAccount') %> <a href="/signup"><%= t('signUp') %></a></p>
 </div>
 
 </body>
