--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,19 +8,23 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-
+    <div class="translate">
+        <a href="/change-lang/kz"><img src="/pictures/kz.jpg" alt="kzflag" width="40px" height="30px"></a>
+        <a href="/change-lang/en"><img src="/pictures/britain.png" alt="enflag" width="40px" height="30px"></a>
+        <a href="/change-lang/ru"><img src="/pictures/russia.png" alt="ruflag" width="40px" height="30px"></a>
+    </div>
 <div class="form-container">
     <h2>SignUp</h2>
     <form action="/signup" method="post">
         <div class="form-group">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="username" placeholder="Enter your username" required autocomplete="off">
+            <label for="name"><%= t('name') %></label>
+            <input type="text" id="name" name="username" placeholder="<%= t('enterUsername') %>" required autocomplete="off">
         </div>
         <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="password" required>
+            <label for="password"><%= t('password') %></label>
+            <input type="password" id="password" name="password" placeholder="<%= t('enterPassword') %>" required>
         </div>
-        <button type="submit" class="submit-btn">SignUp</button>
+        <button type="submit" class="submit-btn"><%= t('signUp') %></button>
     </form>
 </div>
 
